[gd_scene load_steps=8 format=3 uid="uid://xhinlu4g37w8"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ghift"]
[ext_resource type="Texture2D" uid="uid://dki3lhu8w221e" path="res://sprites/player/player.png" id="1_ys024"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pxhch"]
size = Vector2(21, 39)

[sub_resource type="Animation" id="Animation_oj1x1"]
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_488wu"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_ce4ei"]
resource_name = "run"
length = 1.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jiy26"]
_data = {
"RESET": SubResource("Animation_oj1x1"),
"idle": SubResource("Animation_488wu"),
"run": SubResource("Animation_ce4ei")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ghift")

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(0, -27)
texture = ExtResource("1_ys024")
hframes = 12
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_pxhch")

[node name="PlayerAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jiy26")
}
speed_scale = 1.5

[node name="PlayerTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="PlayerTimer" to="." method="_on_player_timer_timeout"]
